# SMolDER

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
smolder/: app.py
smolder/screens/: homepage.py
smolder_app/: .dockerignore  Dockerfile  pyproject.toml
smolder_app/src/: app.py
smolder_app/src/screens/: explore.py
smolder_etl/: .dockerignore  Dockerfile  pyproject.toml
smolder_etl/src/smolder_dbt/: dbt_project.yml  profiles.yml
smolder_etl/src/smolder_dbt/models/marts/: fct_drug_indications.sql  fct_drug_targets.sql  fct_fda_drugs.sql
smolder_etl/src/smolder_dbt/models/staging/: stg_approvals.sql  stg_indications.sql  stg_structures.sql  stg_targets.sql
smolder_etl/src/smolder_dlt/: drugcentral_pipeline.py
