[tool.poetry]
name = "smolder"
version = "0.1.0"
description = ""
authors = ["rwcrocker <rcrocker@montai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny = "^1.4.0"
shinyswatch = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
