[project]
name = "smolder_etl"
version = "0.1.0"
description = "ETL pipeline for SMolDER application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.9.0",
    "dbt-score>=0.16.0",
    "dlt[sql-database,duckdb]>=1.25.0",
    "duckdb>=1.0.0",
    "psycopg2-binary>=2.9.12",
]
